@@ -2,6 +2,8 @@ package com.example.thenotelobster;
 
 import com.example.thenotelobster.QuizClasses.QuizMultipleChoiceQuestion;
 import com.example.thenotelobster.QuizClasses.QuizResponse;
+import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Node;
@@ -11,7 +13,9 @@ import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
 
 import java.io.IOException;
+import java.sql.SQLException;
 import java.util.Arrays;
+import java.util.List;
 
 public class QuizController extends NavigationUI {
 
@@ -20,6 +24,7 @@ public class QuizController extends NavigationUI {
     @FXML private Button newQuizButton;
     @FXML private Label descriptionLabel;
     @FXML private Label titleLabel;
+    @FXML private ListView<String> QuizMenu;
 
     @FXML
     protected void onCreateNewQuizClick() throws IOException {
@@ -32,24 +37,47 @@ public class QuizController extends NavigationUI {
     }
 
     public void initialize() {
-        // Example quiz creation inside controller
-
-        AIManager aiManager = AIManager.getInstance();
         QuizResponse quiz;
-        if(aiManager.currentQuiz == null) {
-
-
-            quiz = new  QuizResponse("Sample Quiz", Arrays.asList(
-                    new QuizMultipleChoiceQuestion("What is 2 + 2?", "4", Arrays.asList("3", "4", "5", "6")),
-                    new QuizMultipleChoiceQuestion("What color is the sky?", "A", Arrays.asList("Blue", "Green", "Red", "Yellow", "A"))
+        try {
+            // load the quiz you just saved (for now we use ID=1; later bind this to selection)
+            QuizDAO dao = new QuizDAO();
+            quiz = dao.loadQuiz(1);
+        } catch (SQLException e) {
+            e.printStackTrace();
+            // fallback to AI‐sample if DB fails
+            AIManager aiManager = AIManager.getInstance();
+            quiz = (aiManager.currentQuiz != null)
+                    ? aiManager.currentQuiz
+                    : new QuizResponse("Sample Quiz", Arrays.asList(
+                    new QuizMultipleChoiceQuestion("What is 2 + 2?", "4", List.of("3", "4", "5", "6")),
+                    new QuizMultipleChoiceQuestion("What color is the sky?", "A", List.of("Blue", "Green", "Red", "Yellow"))
             ));
         }
-        else
-        {
-            quiz = aiManager.currentQuiz;
-        }
-
         loadQuiz(quiz);
+
+        QuizDAO quizDAO = new QuizDAO();
+
+        ObservableList<String> quizTitles = FXCollections.observableArrayList();
+        try {
+            List<QuizResponse> saved = quizDAO.getAllQuizzesForCurrentUser();
+            for (QuizResponse quizResponse : saved) {
+                quizTitles.add(quizResponse.title);
+            }
+        } catch (SQLException ex) {
+            ex.printStackTrace();
+        }
+        QuizMenu.setItems(quizTitles);
+
+        QuizMenu.getSelectionModel().selectedItemProperty().addListener((obs, oldTitle, newTitle) -> {
+            if (newTitle != null) {
+                try {
+                    QuizResponse q = quizDAO.getQuizByTitle(newTitle);
+                    if (q != null) loadQuiz(q);
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+        });
     }
 
     private void loadQuiz(QuizResponse quiz) {
@@ -57,6 +85,7 @@ public class QuizController extends NavigationUI {
         quizBox.getChildren().clear();
         titleLabel.setText(quiz.title);
         descriptionLabel.setText(quiz.description);
+
         for (int i = 0; i < quiz.multipleChoiceQuestions.size(); i++) {
             QuizMultipleChoiceQuestion question = quiz.multipleChoiceQuestions.get(i);
 
